# poligon-io-extracter

./: .gitignore  exam.py  polygon_to_exel.py  pyproject.toml  test-symbols.json  test_exam.py
